# cyberdog_ws

./: .gitignore  LICENSE.txt  README.md  cyberdog.repos  vision.repos
.github/: ci.repos
.github/workflows/: workflow.yml
cyberdog_bringup/: CMakeLists.txt  README.md  automatic.cmake  package.xml
cyberdog_bringup/automatic/: bringup.yaml  launch.yaml  node.yaml
cyberdog_bringup/bringup/: __init__.py  bringup.py  manual.py
cyberdog_bringup/config/: node.yaml  test.yaml
cyberdog_bringup/cyberdog_pycommon/: __init__.py  launch_tools.py  rewritten_yaml.py
cyberdog_bringup/doc/: cyberdog_bringup_cn.md  cyberdog_bringup_en.md
cyberdog_bringup/launch/: automation_launch.py  cyberdog_launch.py  lc_bringup_launch.py  sensor_manager.launch.py  sensor_manager_test.launch.py
cyberdog_bringup/parameters/: test.yaml
cyberdog_bringup/params/: bringup.yaml  launch_groups.yaml  launch_nodes.yaml  nodes.yaml  xxx.yaml  xxxxx.yaml
cyberdog_bringup/src/: main.cpp
cyberdog_bringup_test/: CMakeLists.txt  package.xml
cyberdog_bringup_test/config/: config.yaml
cyberdog_bringup_test/launch/: launch.py
cyberdog_bringup_test/parameters/: config.yaml
cyberdog_bringup_test/src/: cyberdog_bringup_test.cpp
src/close_source/cyberdog_aft/: CMakeLists.txt  package.xml
src/close_source/cyberdog_aft/config/: aft_register_uri.toml  delete_document.toml  dynamic_para_setting.toml  static_para_setting.toml
src/close_source/cyberdog_aft/include/cyberdog_aft/: config.hpp.cmake  config_manager.hpp  factory_tool.hpp  task_manager.hpp  task_scheduler.hpp
src/close_source/cyberdog_aft/include/cyberdog_aft/navigation/: navigation.hpp  navigation_interface.hpp
src/close_source/cyberdog_aft/include/cyberdog_aft/protocol/: aft_client.hpp  aft_server.hpp  protocol.hpp  protocol_grpc.hpp  protocol_interface.hpp  protocol_motion.hpp  protocol_navigation.hpp  protocol_slam.hpp  protocol_system.hpp  protocol_visualization.hpp
src/close_source/cyberdog_aft/include/cyberdog_aft/slam/: lidar_slam.hpp  slam.hpp  slam_interface.hpp  vision_slam.hpp
src/close_source/cyberdog_aft/include/cyberdog_aft/system/: hardware.hpp  report_result.hpp  storage.hpp  system.hpp  system_interface.hpp  temp_ctrl.hpp
src/close_source/cyberdog_aft/include/cyberdog_aft/visualization/: visualization.hpp
src/close_source/cyberdog_aft/proto/: cyberdog_aft.proto
src/close_source/cyberdog_aft/scripts/: connect_by_id.py  connect_by_ip.py
src/close_source/cyberdog_aft/src/: config_manager.cpp  cyberdog_aft_client_node.cpp  cyberdog_aft_node.cpp  factory_tool.cpp  task_manager.cpp  task_scheduler.cpp
src/close_source/cyberdog_aft/src/navigation/: navigation.cpp  navigation_interface.cpp
src/close_source/cyberdog_aft/src/protocol/: aft_client.cpp  aft_server.cpp  protocol.cpp  protocol_grpc.cpp  protocol_interface.cpp  protocol_motion.cpp  protocol_navigation.cpp  protocol_slam.cpp  protocol_system.cpp  protocol_visualization.cpp
src/close_source/cyberdog_aft/src/slam/: lidar_slam.cpp  slam.cpp  slam_interface.cpp  vision_slam.cpp
src/close_source/cyberdog_aft/src/system/: hardware.cpp  storage.cpp  system.cpp  system_interface.cpp  temp_ctrl.cpp
src/close_source/cyberdog_aft/src/visualization/: visualization.cpp
src/close_source/cyberdog_aft/test/: test_report_result.cpp
src/cyberdog_bringup/: automatic.cmake  package.xml
src/cyberdog_bringup/automatic/: bringup.yaml  launch.yaml  node.yaml
src/cyberdog_bringup/bringup/: manual.py
tools/: Dockerfile  build_arm.sh  ci_check.sh  connector.sh  connector.zsh  cyberdog_wifi.service  reboot_cyberdog.sh
