<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cyberdog_bringup</name>
  <version>0.0.0</version>
  <description>Bringup all cyberdog modules</description>
  <maintainer email="dukun1@xiaomi.com">xuhaiwang</maintainer>
  <license>Apache License, Version 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- <depend>athena_bms</depend> -->
  <!-- <depend>athena_cyberdog_app</depend> -->
  <!-- <depend>athena_decisionmaker</depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
