<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cyberdog_aft</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="quandy2020@126.com">quan</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>nav2_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cyberdog_common</depend> 
  <depend>cyberdog_parameter</depend>
  <depend>ament_index_cpp</depend>
  <depend>filesystem</depend> 
  <depend>protocol</depend>
  <depend>toml</depend>
  <depend>nav2_util</depend>
  <depend>nav2_lifecycle_manager</depend>
  <depend>nav_msgs</depend>
  <depend>cyberdog_debug</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
